Fixed syntax error in kube manifest

--- a/encryption-config.yaml
+++ b/encryption-config.yaml
@@ -7,4 +7,4 @@ resources:
     - kms:
        name: grpc-kms-provider
        cachesize: 1000
-       endpoint: unix:///tmp/kms-provider.sock
+       endpoint: unix:///var/run/kmsplugin/socket.sock
