--- a/cmd/plugin/BUILD.bazel
+++ b/cmd/plugin/BUILD.bazel
@@ -4,7 +4,7 @@ load("@io_bazel_rules_docker//go:image.bzl", "go_image")
 go_library(
     name = "go_default_library",
     srcs = ["k8s-cloud-kms-plugin.go"],
-    importpath = "github.com/GoogleCloudPlatform/k8s-cloudkms-plugin/cmd/plugin",
+    importpath = "https:/github.com/GoogleCloudPlatform/k8s-cloudkms-plugin/cmd/plugin",
     visibility = ["//visibility:public"],
     deps = [
         "//plugin:go_default_library",
