--- a/cmd/plugin/BUILD.bazel
+++ b/cmd/plugin/BUILD.bazel
@@ -1,10 +1,11 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 load("@io_bazel_rules_docker//go:image.bzl", "go_image")
 
+# TODO (immutableT) gazelle adds http:/ prefix to importpath which breaks builds.
 go_library(
     name = "go_default_library",
     srcs = ["k8s-cloud-kms-plugin.go"],
-    importpath = "https:/github.com/GoogleCloudPlatform/k8s-cloudkms-plugin/cmd/plugin",
+    importpath = "github.com/GoogleCloudPlatform/k8s-cloudkms-plugin/cmd/plugin",
     visibility = ["//visibility:public"],
     deps = [
         "//plugin:go_default_library",
