--- a/plugin/BUILD.bazel
+++ b/plugin/BUILD.bazel
@@ -4,15 +4,11 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
-        "config.go",
         "healthz.go",
         "http_client.go",
         "metrics.go",
-        "orchestrator.go",
         "plugin.go",
         "service.pb.go",
-        "utils.go",
-        "validation.go",
     ],
     importpath = "github.com/GoogleCloudPlatform/k8s-cloudkms-plugin/plugin",
     visibility = ["//visibility:public"],
@@ -24,7 +20,6 @@ go_library(
         "//vendor/golang.org/x/net/context:go_default_library",
         "//vendor/golang.org/x/oauth2:go_default_library",
         "//vendor/golang.org/x/oauth2/google:go_default_library",
-        "//vendor/golang.org/x/sys/unix:go_default_library",
         "//vendor/google.golang.org/api/cloudkms/v1:go_default_library",
         "//vendor/gopkg.in/gcfg.v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
@@ -41,7 +36,13 @@ go_test(
     ],
     embed = [":go_default_library"],
     deps = [
+        "//testutils/fakekms:go_default_library",
+        "//vendor/github.com/golang/protobuf/proto:go_default_library",
+        "//vendor/github.com/phayes/freeport:go_default_library",
         "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
-        "//vendor/golang.org/x/net/context:go_default_library",
+        "//vendor/github.com/prometheus/client_model/go:go_default_library",
+        "//vendor/google.golang.org/api/cloudkms/v1:go_default_library",
+        "//vendor/google.golang.org/api/googleapi:go_default_library",
+        "@org_golang_google_grpc//:go_default_library",
     ],
 )
