--- a/testutils/fakekms/BUILD.bazel
+++ b/testutils/fakekms/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["fakekms.go"],
-    importpath = "https:/github.com/GoogleCloudPlatform/k8s-cloudkms-plugin/testutils/fakekms",
+    importpath = "github.com/GoogleCloudPlatform/k8s-cloudkms-plugin/testutils/fakekms",
     visibility = ["//visibility:public"],
     deps = [
         "//vendor/github.com/golang/glog:go_default_library",
