--- a/plugin/BUILD.bazel
+++ b/plugin/BUILD.bazel
@@ -31,6 +31,7 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = [
+        "healthz_test.go",
         "http_client_test.go",
         "plugin_test.go",
     ],
