.gitignore is now working

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-bazel-bin/*
-bazel-genfiles/*
-bazel-k8s-cloudkms-plugin/*
+bazel-bin
+bazel-genfiles
+bazel-k8s-cloudkms-plugin
 bazel-out/*
 bazel-testlogs/*
 .idea
